--- a/PollutionPerCounty.Rmd
+++ b/PollutionPerCounty.Rmd
@@ -20,13 +20,16 @@ library(lubridate)
 ```{r, results='asis', echo=FALSE}
 #source: https://data.cdc.gov/dataset/Air-Quality-Measures-on-the-National-Environmental/cjae-szjv
 
+#
 poll_county<-read.csv("https://data.cdc.gov/api/views/cjae-szjv/rows.csv?accessType=DOWNLOAD")
+head(poll_county)
 head(poll_county)
 poll_county<-poll_county %>%
   filter(MeasureType=='Average')%>%
   group_by(ReportYear)%>%
   arrange(CountyName)%>%
-  arrange(StateName)
+  arrange(StateName)%>%
+  rename(FIPSCode=CountyFips)
 
 
 every_us_county <- 
