Stable checkpoint. Only Broomfield County, CO is left to decide how to deal with.

--- a/USCountyUrbanForestData.Rmd
+++ b/USCountyUrbanForestData.Rmd
@@ -44,7 +44,8 @@ stateLinks <- paste(baseURL,as.character(stateLinks),sep="")
 AllStates <- data.frame(stateNames, stateLinks, stringsAsFactors = FALSE)
 AllStates 
 
-AllStates[46, "stateNames"] <- "District of Columbia"
+#AllStates[46, "stateNames"] <- "District of Columbia"
+AllStates$stateNames[AllStates$stateNames == "Washington, D.C"] <- "District of Columbia"
 AllStates
 ```
 
