--- a/Arsenic.Rmd
+++ b/Arsenic.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Untitled"
+title: "Arsenic interpolation"
 author: ""
 date: ""
 output: 
@@ -21,7 +21,6 @@ library(lubridate)
 library(gstat)
 library(sp)
 library(maptools)
-library(tigris)
 library(spatstat)
 ```
 *Source file* 
@@ -32,59 +31,124 @@ includeSourceDocuments()
 
 
 ```{r}
-download.file("https://water.usgs.gov/nawqa/trace/data/arsenic_nov2001.xls", destfile = "~/_Berkeley/_2017 Spring/Stat 133/final_project/arsenic.xls")
-arsenic <- read.csv("~/_Berkeley/_2017 Spring/Stat 133/final_project/arsenic_nov2001.csv", stringsAsFactors = FALSE)
+## download arsenic data--destfile will need to be changed for specific computer
+url <- "https://water.usgs.gov/nawqa/trace/data/arsenic_nov2001.xls"
+tmp <- tempfile(fileext=".xls")
+download.file(url,destfile=tmp, mode="wb")
+arsenic <- read_excel(tmp, skip=58)
 
-arsenic <- arsenic[!arsenic$STATE %in% c("AK","PR"),]
-arsenic$SAMPDATE <- dmy(arsenic$SAMPDATE)
+## DATA CLEANING
+## get rid of non-continental US data (Alaska, Puerto Rico, Virgin Islands)
+arsenic <- arsenic[!arsenic$STATE %in% c("AK","PR","VI"),]
+## get rid of columns we don't need (especially becuase a few of the columns loaded in really weird)
+arsenic <- arsenic %>%
+  dplyr::select(STATE,FIPS,AS_CONC,LAT_DD,LON_DD)
+## many numeric data is in character form--change from character to numeric
 arsenic$LAT_DD <- as.numeric(arsenic$LAT_DD)
 arsenic$LON_DD <- as.numeric(arsenic$LON_DD)
 arsenic$AS_CONC <- as.numeric(arsenic$AS_CONC)
 arsenic$FIPS <- as.numeric(arsenic$FIPS)
-arsenic <- arsenic[complete.cases(arsenic[,7]),]
-arsenic <- arsenic %>%
-  select(-LAT_DMS, -LON_DMS)
-arsenic_test <- arsenic %>%
-  filter(AS_CONC <50)
+## take out any observations missing sample date
+arsenic <- arsenic[complete.cases(arsenic[,2]),]
 
 
+## bring in map of all counties from Katelyn's code: ggplotMapsTEST.Rmd
+library(tigris)
+us.map <- tigris::counties(cb = TRUE, year = 2015)
+us.map <- us.map[!us.map$STATEFP %in% c("02", "15", "72", "66", "78", "60", "69",
+                                        "64", "68", "70", "74"),]
+us.map <- us.map[!us.map$STATEFP %in% c("81", "84", "86", "87", "89", "71", "76",
+                                        "95", "79"),]
+library(broom)
+county_map <- tidy(us.map, region="GEOID")
+###END of map code
+
+## you can see what the arsenic data looks like on the US map
 ggplot() +
   geom_polygon(data= county_map, aes(x=long, y=lat, group=group), fill = "white", color="black", size=0.25) +
-  geom_point(data=arsenic_test, aes(x=-LON_DD, y=LAT_DD, col=AS_CONC))
+  geom_point(data=arsenic, aes(x=-LON_DD, y=LAT_DD, col=AS_CONC))
 
 
-xy <- arsenic[, c(9,10)]
-xy$LON_DD <- -1*xy$LAT_DD
-spdf <- SpatialPointsDataFrame(coords = xy, data = arsenic, proj4string = CRS("+proj=longlat +datum=NAD83 +no_defs +ellps=GRS80 +towgs84=0,0,0"))
+## PREPPIND DATA FOR INTERPOLATION
+#xy <- arsenic[, c(9,10)]
+#xy$LON_DD <- -1*xy$LAT_DD
+#spdf <- SpatialPointsDataFrame(coords = xy, data = arsenic, proj4string = CRS("+proj=longlat +datum=NAD83 +no_defs +ellps=GRS80 +towgs84=0,0,0"))
 
+## duplicate cleaned arsenic data to prevent overwriting
 arsenic_test <- arsenic
+## assign coordinates--LON must be multiplied by negative to reflect that it is located in the W. Hemisphere
+## if not, this will plot on a mirrored image of the US
 arsenic_test$x <- -1*arsenic_test$LON_DD
 arsenic_test$y <- arsenic_test$LAT_DD
 
+## this makes the arsenic_test into a spatial data
 coordinates(arsenic_test) = ~x + y
 plot(arsenic_test)
+## define the projection for arsenic_test to match the projection for us.map
 proj4string(arsenic_test) <- proj4string(us.map)
 
 x.range <- as.numeric(c(-125, -66))  # min/max longitude of the interpolation area
 y.range <- as.numeric(c(24, 50))  # min/max latitude of the interpolation area
 
-grd <- expand.grid(x = seq(from = x.range[1], to = x.range[2], by = 1), y = seq(from = y.range[1], to = y.range[2], by = 1))  # expand points to grid
-coordinates(grd) <- ~x + y
-proj4string(grd) <- proj4string(us.map)
+grd <- expand.grid(x = seq(from = x.range[1], to = x.range[2], by = 0.1), y = seq(from = y.range[1], to = y.range[2], by = 0.1))  # expand points to grid
+coordinates(grd) <- ~x + y # define spatial coordinates of grd
+proj4string(grd) <- proj4string(us.map) #with the same projections
 gridded(grd) <- TRUE
+## visualization of grid and arsenic data
 plot(grd, cex = 1.5, col = "grey")
 points(arsenic_test, pch = 1, col = "red", cex = 1)
 
-
+## perform the interpolation!
 idw <- krige(AS_CONC ~ 1, arsenic_test, grd)
 idw.out = as.data.frame(idw)
 names(idw.out)[1:3] <- c("long", "lat", "arsenic_pred")
 
 
-
+## here's what the interpolation looks like with the us.map
 ggplot() +
-  geom_tile(data = idw.out, alpha = 0.8, aes(x = long, y = lat, fill = round(arsenic_pred, 0))) + scale_fill_gradient(low = "cyan", high = "orange") + 
+  geom_tile(data = idw.out, alpha = 0.8, aes(x = long, y = lat, fill = round(arsenic_pred, 0)))  +
+  scale_fill_gradient(low = "cyan", high = "orange") + 
   geom_polygon(data= county_map, aes(x=long, y=lat, group=group), fill = NA, color="black", size=0.25) +
-  geom_point(data=arsenic, aes(x=-LON_DD, y=LAT_DD, col=AS_CONC))
+  geom_point(data=arsenic, aes(x=-LON_DD, y=LAT_DD), color="red")
 
 ```
+
+```{r}
+library(raster)
+idw_raster <- raster(idw)
+avgArsenic <- extract(idw_raster, us.map, fun = mean, sp=TRUE)
+avgArsenic_df <- as.data.frame(avgArsenic)
+
+county_map_As <- left_join(county_map, avgArsenic_df, by = c("id" = "GEOID"))
+
+ggplot() +
+    #blank county map
+    geom_polygon(data= county_map_As, aes(x=long, y=lat, group=group), fill = "white", color="black", size=0.25) +
+    #Air quality data
+    geom_polygon(data= county_map_As, aes(x=long, y=lat, group=group, fill = var1.pred), color="black", size=0.25) +
+    ggplot2::coord_map() +
+    scale_fill_gradientn(colors = c("green", "red"))  +
+    labs(title="Arsenic Levels") + 
+    theme_bw() +
+    theme(axis.line=element_blank(),
+          axis.text.x=element_blank(),
+          axis.text.y=element_blank(),
+          axis.ticks=element_blank(),
+          axis.title.x=element_blank(),
+          axis.title.y=element_blank(),
+          panel.grid.major = element_blank(),
+          panel.grid.minor = element_blank(),
+          panel.border = element_blank(),
+          panel.background = element_blank(),
+          legend.title=element_blank())
+
+```
+
+
+```{r}
+arsenic_df <- avgArsenic_df %>%
+  dplyr::select(GEOID, var1.pred)
+names(arsenic_df) <- c("fips","arsenic")
+  
+```
+  
