--- a/USCountyUrbanForestData.Rmd
+++ b/USCountyUrbanForestData.Rmd
@@ -20,71 +20,93 @@ includeSourceDocuments()
 
 
 The purpose of this document is to extract urban forest from all the counties in the U.S.
-The original data source is:
-https://www.nrs.fs.fed.us/data/urban/ 
 
-Extracts the links to each State from the main link:
-https://www.nrs.fs.fed.us/data/urban/
+
+#' Scrapes the excel download link for each state in the U.S.
+#' Source: https://www.nrs.fs.fed.us/data/urban/
+#'
+#' @param x A number
+#' @param y A number
+#' @return The sum of \code{x} and \code{y}
+
 ```{r}
-library(XML)
-library(RCurl)
-library(readxl)
-URL <- "https://www.nrs.fs.fed.us/data/urban/"
-txt <- getURLContent(URL)
-doc <- htmlParse(txt)
+#' Scrapes the excel download link for each state in the U.S.
+#'
+#' @return A data frame containing variables: stateNames and downloadLinks (Excel file download links)
 
-#Scrape the county name
-stateNames <- xpathSApply(doc, '//ul/li/a/strong', xmlValue)
+Webscrape <- function(){
+  
+  #----------------------------------------------
+  #Scrape the link to each state from the US data
+  #----------------------------------------------
 
-#****NOTE: Missing Alaska and Hawaii*******
-stateLinks <- xpathSApply(doc, '//ul[@class="state_list"]/li/a/@href')
-baseURL <- "https://www.nrs.fs.fed.us"
-stateLinks <- paste(baseURL,as.character(stateLinks),sep="")
+  library(XML)
+  library(RCurl)
+  library(readxl)
+  
+  URL <- "https://www.nrs.fs.fed.us/data/urban/"
+  txt <- getURLContent(URL)
+  doc <- htmlParse(txt)
+  
+  #Scrape the state name
+  stateNames <- xpathSApply(doc, '//ul/li/a/strong', xmlValue)
+  
+  #Scrape the state link
+  stateLinks <- xpathSApply(doc, '//ul[@class="state_list"]/li/a/@href')
+  baseURL <- "https://www.nrs.fs.fed.us"
+  stateLinks <- paste(baseURL,as.character(stateLinks),sep="")
+  
+  #Data Frame of StateName and stateLink
+  AllStates <- data.frame(stateNames, stateLinks, stringsAsFactors = FALSE)
 
-#Data Frame of StateName and stateLink
-AllStates <- data.frame(stateNames, stateLinks, stringsAsFactors = FALSE)
-AllStates 
-
-#AllStates[46, "stateNames"] <- "District of Columbia"
-AllStates$stateNames[AllStates$stateNames == "Washington, D.C"] <- "District of Columbia"
-AllStates
-```
-
-Extracts the excel file download link for each state
-```{r}
-downloadLinks <- vector(mode="character", length=length(AllStates$stateNames))
-
-for (i in 1:length(stateLinks)){
-  stateURL<- stateLinks[i]
-  stateTxt <- getURLContent(stateURL)
-  stateDoc <- htmlParse(stateTxt)
-  downloadLink <- xpathSApply(stateDoc, '//ol[@id="data_options"]/li/a/@href')
-
-  #The HTML source code is poor so need to use grepl to extract .xls from Xpath results
-  length(downloadLink)
-  for (j in 1:length(downloadLink)){
-     if (grepl(".xls", downloadLink[j])){
-      downloadLinks[i] <- downloadLink[j]
-      break 
+  #Fix naming conventions standard Washington DC --> District of Columbia
+  AllStates$stateNames[AllStates$stateNames == "Washington, D.C"] <- "District of Columbia"
+  
+  #-------------------------------------------------------
+  #Scrape the state xls file download link from each state page
+  #-------------------------------------------------------
+  
+  downloadLinks <- vector(mode="character", length=length(AllStates$stateNames))
+  
+  for (i in 1:length(stateLinks)){
+    stateURL<- stateLinks[i]
+    stateTxt <- getURLContent(stateURL)
+    stateDoc <- htmlParse(stateTxt)
+    downloadLink <- xpathSApply(stateDoc, '//ol[@id="data_options"]/li/a/@href')
+  
+    #The HTML source code is poor so need to use grepl to extract .xls from Xpath results
+    length(downloadLink)
+    for (j in 1:length(downloadLink)){
+       if (grepl(".xls", downloadLink[j])){
+        downloadLinks[i] <- downloadLink[j]
+        break 
+      }
     }
   }
+  
+  # Add to dataframe
+  AllStates$downloadLinks <- downloadLinks
+  
+  # Return only the relevant part of the database
+  AllStates <- AllStates %>% select(stateNames, downloadLinks)
+  
+  return(AllStates)
 }
 
-AllStates$downloadLinks <- downloadLinks
-
-AllStates$downloadLinks
- 
 ```
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-Downloading and loading Excel files (Method 1: Using Tempfiles)
+Downloading and loading Excel files 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
 All the support functions:
 
-Function that returns a dataframe with the base FIPS info from the 2010 census (with Oglala update maybe)
 ```{r}
+#' Creates a reference dataframe that maps county name to FIPS code based on the 2010 census, with naming updates up to 2015.
+
+#' @param state (optional) to restrict FIPS codes to one state
+#' @return A data frame containing variables: State, CountyName, and FIPS (FIPS code)
 
 FIPS_fun <- function(state = NA){
   #Note: colClasses = "character" helps keep the leading 0s
@@ -98,49 +120,52 @@ FIPS_fun <- function(state = NA){
   #Merge state and county into one FIPS code
   FIPS_base <- df %>% mutate(FIPS = paste(StateFIPS, CountyFIPS, sep = ""))
   
-  #Delete Shannon County
+  #Delete Shannon County (It changed to Oglala Lakota)
   FIPS_base <- FIPS_base %>% filter(FIPS != "46113")
-  
-  
-  #iew(FIPS_base)
   
   #return FIPS codes of the state passed in
   if(!is.na(state)){
-    df <- FIPS_base %>% subset(State == state) %>% select(State, CountyName, FIPS)
-    return(df)
+    FIPS_base <- FIPS_base %>% subset(State == state) %>% select(State, CountyName, FIPS)
+    return(FIPS_base)
   }else{return(FIPS_base)}
   
-  #Minimal dataframe to facilitate joins
-  #FIPS_base_compact <- FIPS_base %>% select(c(State, CountyName, FIPS))
 }
 
 ```
 
 
-Function that extracts data from an excel file relating to the Tree canopy Covering (m2/person), Available green space (ha), and Tree canopy cover in developped regions (%) for each county in the state. This data, along with the County name and the FIPS code is returned as a data frame.
-
 ```{r}
-extractStateData <- function(tmp, stateAbbrev){
+#' Extracts data from an excel file relating to the:
+#' Tree canopy (m2/person), Available green space (ha), and Tree canopy cover in developped regions (%) 
+#' for each county in the state. This data, along with the county name and the FIPS code is returned as a data frame.
+
+#' @param file Location of the state .xls file
+#' @return A data frame containing variables: State, CountyName, FIPS (FIPS code), TreeCanopy, AvailGreenSpace, and TreeCanopyCover
+
+ExtractStateData <- function(file, stateAbbrev){
   
-  #Read-in relevant sheets (7 and 10)
-  #Known bug: NC 7th sheet is actually sheet 8....grrrr.
+  # ---------------------------------------------
+  # Read-in relevant sheets from the excel files
+  # ---------------------------------------------
+  # Known bugs: NC 7th sheet is actually sheet 8.
   # Solution: sheet = string instead of sheet = integer when reading the excel file.
-  
-  #Known Bug: DC messes lots of things up due to sheet differences, naming, etc.
-  # Solution: various fixes changing DC to District of Columbia and reading sheet 5 & 8 instead. Start at line 4 in sheet 8 because of the random space
+  # Known Bug: DC has fewer sheets.
+  # Solution: various fixes changing DC to District of Columbia and reading sheet 5 & 8 instead. 
   
   #tmp = "C:\\Users\\kagex\\stats133Project\\AllStates\\Illinois.xls"
   #stateAbbrev = "IL"
   
   if(stateAbbrev == "DC"){
-    xl_7 <- read_excel(tmp, sheet = "5", skip = 3)
-    xl_10 <- read_excel(tmp, sheet = "8", skip = 4) 
+    xl_7 <- read_excel(file, sheet = "5", skip = 3)
+    xl_10 <- read_excel(file, sheet = "8", skip = 4) 
   }else{
-    xl_7 <- read_excel(tmp, sheet = "7", skip = 3)
-    xl_10 <- read_excel(tmp, sheet = "10", skip = 3)
+    xl_7 <- read_excel(file, sheet = "7", skip = 3)
+    xl_10 <- read_excel(file, sheet = "10", skip = 3)
   }
   
-  #Clean and select relevant variables
+  # -----------------------------------
+  # Clean and select relevant variables
+  # -----------------------------------
   
   xl_7 <- xl_7 %>% select(c(`X__1`, `m2/person__1`, `Available green space (ha)`))
   #Units: Tree canopy Covering (m2/person), Available green space (ha)
@@ -157,20 +182,18 @@ extractStateData <- function(tmp, stateAbbrev){
   joined <- full_join(xl_7, xl_10, by = "CountyName")
   #get ride of statewide summary row
   joined_clean <- joined %>% subset(CountyName != "Statewide")
+  
   #Add column of state Abbreviations to assist debugging later
-  joined_clean$StateAbb <- rep(stateAbbrev, times = length(joined_clean$CountyName))
+  #joined_clean$StateAbb <- rep(stateAbbrev, times = length(joined_clean$CountyName))
   
+  # ------------------
+  # Naming Corrections:
+  # -----------------
 
-  #Add FIPS codes
-  #Moved to main code to prevent looping error
-  #stateAbbrev <- state.abb[match(AllStates$stateNames[1],state.name)]
-  
-  #Corrections:
-  
-  
-  # Washington DC must be called District of Columbia to find FIPS code
-  # La Salle county in IL changed to LaSalle County in 2001 
-  # Clifton Forge city is no longer a county as of 2001
+  # 1) Washington DC must be called District of Columbia to find FIPS code
+  # 2) La Salle county in IL changed to LaSalle County in 2001 
+  # 3) Clifton Forge city is no longer a county as of 2001
+  # 4) Shannon County, SD changed to Oglala Dakota in 2015
   if(stateAbbrev == "DC"){
     #joined_clean[1, "CountyName"] <- "District of Columbia"
     joined_clean$CountyName[joined_clean$CountyName == "Washington, D.C."] <- "District of Columbia"
@@ -183,87 +206,91 @@ extractStateData <- function(tmp, stateAbbrev){
     joined_clean$CountyName[joined_clean$CountyName == "Shannon County"] <- "Oglala Lakota County"
   }
   
+  # Add FIPS codes to data
   FIPS_base <- FIPS_fun(state = stateAbbrev)
-  
   final_df <- full_join(joined_clean, FIPS_base, by = "CountyName")
-  #View(final_df)
+  
   return(final_df)
-
 }
-
-#names(df)[names(df) == 'old.var.name'] <- 'new.var.name'
-  
-```
-
-
--------------------------
-Main Code:
--------------------------
-
-
-Downloading and processing each state to extract all counties. 
-
-THIS CODE IS NOT READY -- STILL DEBUGGING USING LOCAL XLS FILES
-```{r, eval=FALSE}
-for(i in 1:1){ #:length(AllStates$downloadLinks)){
-  #Download xls file
-  url <- AllStates$downloadLinks[31]
-  tmp <- tempfile(fileext=".xls")
-  download.file(url,destfile=tmp, mode="wb")
-  
-CODE WILL BE UPDATED HERE SOON
-
 
 ```
 
 To keep from wasting time redownloading files, use this code to download once and use your local files. 
 ```{r, eval=FALSE}
-library(readxl)
+#' Downloads excel files to a local directory for later extraction and cleaning. 
+#' 
+#' @param AllStates data frame that contains stateNames and downloadLinks
+#' @return Data frame with stateNames, downloadLinks, and fileLocations 
 
-fileLocations <- vector(mode="character", length=length(AllStates$stateNames))
-for(i in 1:length(AllStates$stateNames)){
-  destination <- paste("C:\\Users\\kagex\\stats133Project\\AllStates\\", AllStates$stateNames[i], ".xls", sep = "")
-  #file must be handled locally during preprocessing.
-  download.file(AllStates$downloadLinks[i], destfile = destination, mode = "wb" )
+DownloadLocally <- function(AllStates){
   
-  fileLocations[i] <- destination
+  library(readxl)
+  
+  #Stores locations for future file reading
+  fileLocations <- vector(mode="character", length=length(AllStates$stateNames))
+  
+  #Download file for each state
+  for(i in 1:length(AllStates$stateNames)){
+    destination <- paste("C:\\Users\\Katrlyn\\stats133Project\\AllStates\\", AllStates$stateNames[i], ".xls", sep = "")
+    
+    download.file(AllStates$downloadLinks[i], destfile = destination, mode = "wb" )
+    
+    fileLocations[i] <- destination
+  }
+  
+  AllStates$fileLocations <- fileLocations
+  return(AllStates)
+  
 }
 
-AllStates$fileLocations <- fileLocations
-
-View(AllStates)
 ```
 
 Load the filepaths if you're using the downloaded files
 ```{r}
-AllStates$fileLocations <- paste("C:\\Users\\kagex\\stats133Project\\AllStates\\", AllStates$stateNames, ".xls", sep = "")
-AllStates
+#' Loads the locations of all the excel files stored in a local directory for later extraction and cleaning. 
+#' 
+#' @param AllStates data frame that contains stateNames and downloadLinks
+#' @return Data frame with stateNames, downloadLinks, and fileLocations 
+LoadFilepaths <- function(AllStates){
+  AllStates$fileLocations <- paste("C:\\Users\\Katrlyn\\stats133Project\\AllStates\\", AllStates$stateNames, ".xls", sep = "")
+  return(AllStates)
+}
+
 ```
 
-Main code (assuming you downloaded all the files)
+------------------------------------------------------
+Main code (Method 1: Download all the files locally)
+------------------------------------------------------
 ```{r}
+#Webscrape the data links from the USDA Forest Service
+#The original data source is: https://www.nrs.fs.fed.us/data/urban/ 
 
+AllStates <- Webscrape()
+
+#Download all the xls files locally for data processing
+#AllStates <- DownloadLocally(AllStates)
+AllStates <- LoadFilepaths(AllStates) #You will need to load this every time if you're working from local files
+
+#Extract urban forestry for each state in the United States
 for(i in 1:length(AllStates$downloadLinks)){
   print(AllStates$stateNames[i])
-  #print(AllStates$fileLocations[i])
+  #Get the current state postal abbreviation 
   if(AllStates$stateNames[i] == "District of Columbia"){
     stateAbbrev <- "DC"
   }else{
     stateAbbrev <- state.abb[match(AllStates$stateNames[i],state.name)]
   }
   
-  print(paste("Start", stateAbbrev))
-  state_df <- extractStateData(AllStates$fileLocations[i], stateAbbrev)
+  #Extract the variables Tree canopy Covering (m2/person), Available green space (ha), and Tree canopy cover in developped regions (%) for the current state
+  state_df <- ExtractStateData(AllStates$fileLocations[i], stateAbbrev)
   
+  #Build a data frame of all the states
   if(i == 1){
     df_base <- state_df
-    #View(df_base)
   }else if( i == 2){
     df_full <- rbind(df_base, state_df)
-    #View(df_full)
   }else{
     df_full <- rbind(df_full, state_df)
-    #View(df_full)
   }
   #unlink(tmp)
   
@@ -277,34 +304,52 @@ df
 
 ```
 
+------------------------------------------------------
+Main code (Method 2: Download via temporary files)
+------------------------------------------------------
 
-!!!!!!!!DO NOT USE THE BELOW CODE:!!!!!!!!!!!!!!
-
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-Downloading and loading Excel files (Method 2: Lots of local files) 
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-Download each excel file, load it into R as a dataframe, and assign the data frame to the respective state name.
-NOTE THE DOWNLOAD TIME IS ENORMOUS!!! DON'T RUN THIS ON ALL STATES YET, IT CRASHES EVERYTHING.
-```{r,eval=FALSE}
-library(readxl)
-for(i in 1:1){ #length(AllStates$stateNames)){
-  destination <- paste("C:\\Users\\Katrlyn\\stats133Project\\AllStates\\", AllStates$stateNames[i], ".xls", sep = "")
-  #Works but the issue is that file must be handled locally during preprocessing.
-  download.file(AllStates$downloadLinks[i], destfile = destination, mode = "wb" )
-
-  assign(AllStates$stateNames[i], test)
-  
-}
-```
-
-Accessing the stored tables
 ```{r, eval=FALSE}
-head(Alabama)
+#Webscrape the data links from the USDA Forest Service
+#The original data source is: https://www.nrs.fs.fed.us/data/urban/ 
 
-#Accessing names:
-#as.name(countyName[1])
+AllStates <- Webscrape()
 
+#Download via temp files (no local storage on hard drive )
+
+for(i in 1:length(AllStates$downloadLinks)){
+  #Download xls file
+  url <- AllStates$downloadLinks[i]
+  tmp <- tempfile(fileext=".xls")
+  download.file(url,destfile=tmp, mode="wb")
+  
+  #Extract urban forestry for each state in the United States
+  print(AllStates$stateNames[i])
+  #Get the current state postal abbreviation 
+  if(AllStates$stateNames[i] == "District of Columbia"){
+    stateAbbrev <- "DC"
+  }else{
+    stateAbbrev <- state.abb[match(AllStates$stateNames[i],state.name)]
+  }
+  
+  #Extract the variables Tree canopy Covering (m2/person), Available green space (ha), and Tree canopy cover in developped regions (%) for the current state
+  state_df <- ExtractStateData(tmp, stateAbbrev)
+  
+  #Build a data frame of all the states
+  if(i == 1){
+    df_base <- state_df
+  }else if( i == 2){
+    df_full <- rbind(df_base, state_df)
+  }else{
+    df_full <- rbind(df_full, state_df)
+  }
+  unlink(tmp)
+
+}
+
+View(df_full)
+
+#Things that need fixing still
+df <- df_full %>% subset(is.na(FIPS) | is.na(TreeCanopy))
+df
 ```
-
 
