--- a/ggplotMapsAnishaTest.Rmd
+++ b/ggplotMapsAnishaTest.Rmd
@@ -32,6 +32,7 @@ rm(list = ls())
 
 
 #just testing a dataset we made
+Download/wrangle the USACountyEduAttainment data (from CleanAndJoinData)
 ```{r eval=FALSE}
 
 download.file("https://www.ers.usda.gov/webdocs/DataFiles/CountyLevel_Data_Sets_Download_Data__18026/Education.xls?v=42762", destfile = "/Users/anishakumar/Documents/Stats 133/RStudio Files/Stats133Project/edu.xls", mode = "wb" )
@@ -43,8 +44,41 @@ edu_data<-edu_data%>%dplyr::rename(FIPSCode=`FIPS Code`)
 #names(edu_data)
 edu_dataTemp <- edu_data %>% select(FIPSCode, `Percent of adults with less than a high school diploma, 2011-2015`)
 
-names(edu_dataTemp) <- c("FIPSCode", "NoHSDip")
+names(edu_dataTemp) <- c("GEOID", "NoHSDip")
 head(edu_dataTemp)
+
+##Download county boundary shapefile
+location <- c("/Users/anishakumar/Documents/Stats 133/RStudio Files/Stats133Project/cb_2016_us_county_500k")
+us.map <- readOGR(dsn = location, layer = "cb_2016_us_county_500k", stringsAsFactors = FALSE)
+
+##Clean county shapefile 
+us.map <- us.map[!us.map$STATEFP %in% c("02", "15", "72", "66", "78", "60", "69",
+                                        "64", "68", "70", "74"),]
+# Make sure other outling islands are removed.
+us.map <- us.map[!us.map$STATEFP %in% c("81", "84", "86", "87", "89", "71", "76",
+                                        "95", "79"),]
+# Merge spatial df with air quality data.
+leafmap <- merge(us.map, edu_dataTemp, by=c("GEOID"))
+
+# I HAVE NO IDEA HOW THINGS WORK BELOW THIS POINT 
+
+# Format popup data for leaflet map.
+popup_dat <- paste0(sep = "<br/>",
+  "<b><strong>County: </strong>", 
+  leafmap$NAME, 
+  "<br><strong>Value: </strong>", 
+  leafmap$NoHSDip)
+
+pal <- colorQuantile("YlOrRd", NULL, n = 9)
+# Render final map in leaflet.
+leaflet(data = leafmap) %>% addTiles() %>%
+    addPolygons(fillColor = ~pal(NoHSDip), 
+                fillOpacity = 0.8, 
+                color = "#BDBDC3", 
+                weight = 1,
+                popup = popup_dat)
+
+
 ```
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
